Gets working example

--- a/src/schemas/json/app-config.json
+++ b/src/schemas/json/app-config.json
@@ -1,34 +1,45 @@
 {
-  "$schema": "https://json-schema.org/draft-07/schema",
-  "type": "object",
-  "properties": {
-    "dbHost": {
-      "type": "string"
-    },
-    "dbPort": {
-      "type": "integer"
-    },
-    "dbName": {
-      "type": "string"
-    },
-    "dbUser": {
-      "type": "string"
-    },
-    "dbPass": {
-      "type": "string"
-    },
-    "tables": {
-      "type": "array",
-      "items": {
-        "type": "string"
-      }
-    }
-  },
-  "required": [
-    "dbHost",
-    "dbName",
-    "dbUser",
-    "dbPass",
-    "tables"
-  ]
+	"$schema": "https://json-schema.org/draft-07/schema",
+	"type": "object",
+	"properties": {
+		"dbHost": {
+			"type": "string"
+		},
+		"dbPort": {
+			"type": "integer"
+		},
+		"dbName": {
+			"type": "string"
+		},
+		"dbUser": {
+			"type": "string"
+		},
+		"dbPass": {
+			"type": "string"
+		},
+		"tables": {
+			"type": "array",
+			"items": {
+				"type": "object",
+				"properties": {
+					"schema": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"name"
+				]
+			}
+		}
+	},
+	"required": [
+		"dbHost",
+		"dbName",
+		"dbUser",
+		"dbPass",
+		"tables"
+	]
 }
