--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "vitest": "^0.28.5"
   },
   "dependencies": {
-    "mssql": "^9.1.1",
-    "mustache": "^4.2.0"
+    "mssql": "^9.1.1"
   }
 }
