--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "$schema": "https://json.schemastore.org/package.json",
   "name": "table-types",
   "author": "Chuck Flowers",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "",
   "main": "dist/index.js",
-  "type": "module",
   "scripts": {
     "start": "node dist/index.js",
     "build": "tsc",
@@ -21,6 +20,7 @@
     "vitest": "^0.28.5"
   },
   "dependencies": {
+    "ajv": "^8.12.0",
     "mssql": "^9.1.1"
   },
   "bin": {
