Adds support for postgres

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "$schema": "https://json.schemastore.org/package.json",
   "name": "table-types",
   "author": "Chuck Flowers",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -23,7 +23,8 @@
   },
   "dependencies": {
     "ajv": "^8.12.0",
-    "mssql": "^9.1.1"
+    "mssql": "^9.1.1",
+    "postgres": "^3.3.4"
   },
   "bin": {
     "table-types": "./dist/bin.js"
