Adds support for overriding nullability
Updates the config schema to allow users to override the nullability of
individual columns. Also move the implementation of overrides outside of
the `DbConnector` so that DBMS implementations are simpler and results
across DBMSs are more consistent.

--- a/src/schemas/json/app-config.json
+++ b/src/schemas/json/app-config.json
@@ -21,6 +21,9 @@
           "$ref": "#/definitions/columnOverrideIgnore"
         },
         {
+          "$ref": "#/definitions/columnOverrideNullable"
+        },
+        {
           "$ref": "#/definitions/columnOverrideType"
         }
       ]
@@ -35,6 +38,19 @@
       },
       "required": [
         "ignore"
+      ],
+      "additionalProperties": false
+    },
+    "columnOverrideNullable": {
+      "title": "ColumnOverrideNullable",
+      "type": "object",
+      "properties": {
+        "nullable": {
+          "type": "boolean"
+        }
+      },
+      "required": [
+        "nullable"
       ],
       "additionalProperties": false
     },
